--- a/dev/LoneWolfBook01/res/values/strings.xml
+++ b/dev/LoneWolfBook01/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Lone Wolf Book01 - Flight from the Dark</string>
+    <string name="app_name">Lone Wolf 01: Flight from the Dark</string>
+    <string name="html_title">Flight from the Dark</string>
 </resources>
