--- a/dev/LoneWolf/res/values/strings.xml
+++ b/dev/LoneWolf/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">LoneWolf</string>
+    <string name="activity_action_chart">Action Chart</string>
+    <string name="activity_section">Section</string>
     <string name="html_title"></string>
     <string name="html_title_action_chart">: Action Chart</string>
 </resources>
