--- a/dev/LoneWolf/res/values/strings.xml
+++ b/dev/LoneWolf/res/values/strings.xml
@@ -3,11 +3,13 @@
     <string name="app_name">LoneWolf</string>
     <string name="activity_action_chart">Action Chart</string>
     <string name="activity_section">Section</string>
+    <string name="activity_log">Log</string>
     <string name="menu_debug_go_to">Go to</string>
     <string name="menu_debug_go_to_previous">Previous</string>
     <string name="menu_debug_go_to_next">Next</string>
     <string name="menu_debug_noob_wolf">Noob</string>
     <string name="menu_debug_leet_wolf">Leet</string>
+    <string name="menu_debug_log">Log</string>
     <string name="html_title"></string>
     <string name="html_title_action_chart">: Action Chart</string>
 </resources>
