--- a/dev/LoneWolf/res/values/strings.xml
+++ b/dev/LoneWolf/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="activity_action_chart">Action Chart</string>
     <string name="activity_section">Section</string>
     <string name="activity_log">Log</string>
+    <string name="activity_charactercreation">Character Creation</string>
     <string name="menu_debug_go_to">Go to</string>
     <string name="menu_debug_go_to_previous">Previous</string>
     <string name="menu_debug_go_to_next">Next</string>
