Made the app runnable

--- a/dev/android/LoneWolf/app/src/main/res/values/strings.xml
+++ b/dev/android/LoneWolf/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
 <resources>
 
     <string name="app_name">LoneWolf</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="book01_name">Flight from the Dark</string>
 
 </resources>
